--- a/main.html
+++ b/main.html
@@ -16,12 +16,30 @@
     </div>
 
 
-    <div id="main">The keyCoder returns the Unicode character code of the key that that is pressed!</div>
+    <div id="main">The keyCoder returns the Unicode character of the key that that is pressed!</div>
 
     <input id="input" type="text" onkeydown="myInput(event)">
-    <p id="1"></p>
-    <p id="2"></p>
-    <p id="3"></p>
+
+    <div id="output">
+
+        <div id="one">
+            <p id="1"></p>
+
+        </div>
+
+
+        <div id="two">
+            <p id="2"></p>
+
+        </div>
+
+
+        <div id="three">
+            <p id="3"></p>
+        </div>
+
+
+    </div>
 
 
 
